# recurr

./: .env.example  .gitignore  .gitmodules  .taurignore  Cargo.toml  README.md  justfile  style.css
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  rust.yml
backend/src/supabase/: mod.rs
frontend/: Cargo.toml  index.html
frontend/public/: glue.js
frontend/src/: dashboard.rs  glue.rs
public/: glue.js
recurr-backend/: Cargo.toml  tauri.conf.json
recurr-backend/.cargo/: config.toml
recurr-backend/src/: accounts.rs  lib.rs  main.rs
recurr-backend/src/plaid/: accounts.rs  institutions.rs  link.rs  mod.rs  transactions.rs
recurr-backend/src/supabase/: access_token.rs  accounts.rs  auth.rs  mod.rs
recurr-core/: Cargo.toml
recurr-core/src/: lib.rs
recurr-core/src/plaid/: link.rs
recurr-frontend/: Cargo.toml  Trunk.toml  index.html  style.sass
recurr-frontend/public/: glue.js
recurr-frontend/src/: app.rs  auth.rs  commands.rs  context.rs  main.rs
recurr-frontend/src/auth/: login.rs  mod.rs  signup.rs
recurr-frontend/src/commands/: link.rs  mod.rs
recurr-frontend/src/components/: pagination.rs
recurr-frontend/src/dashboard/: accounts.rs  budgets.rs  mod.rs  summary.rs  transactions.rs
recurr-frontend/src/dashboard/accounts/: link.rs  mod.rs
recurr-frontend/src/dashboard/budgets/: add_modal.rs  edit_modal.rs  mod.rs
recurr-frontend/src/dashboard/transactions/: categories.rs  mod.rs
recurr-frontend/src/plaid/: mod.rs
recurr-frontend/src/supabase/: mod.rs  transactions.rs
recurr_lib/: Cargo.toml
src/: app.rs  auth.rs  context.rs  dashboard.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/plaid/: link.rs  mod.rs
src-tauri/src/supabase/: mod.rs
src/plaid/: link.rs  mod.rs
src/supabase/: mod.rs
supabase/: config.toml
supabase/functions/link_create/: index.ts
supabase/functions/plaid/: index.ts
supabase/functions/public_key_exchange/: index.ts
supabase/migrations/: 20230129183433_remote_commit.sql  20230207011732_remote_commit.sql  20230219225453_cascade_delete_access_tokens.sql  20230404011708_added_transactions.sql  20230404015937_added_transactions.sql  20230409165838_added_transactions.sql
