[package]
name = "recurr-ui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = { version = "0.3.59", features = ["console"] }
yew = { version="0.20.0", features = ["csr"] }
wasm-logger = "0.2.0"
log = "0.4.17"

[workspace]
members = ["src-tauri"]
