[package]
name = "recurr-ui"
version = "0.0.1"
edition = "2021"

[dependencies]
recurr_lib = { path = "../recurr_lib" }
js-sys = "0.3.59"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
supabase-js-rs = "0.1.2"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.59", features = ["console"] }
yew = { version="0.20.0", features = ["csr"] }
getrandom = { version = "0.2.8", features = ["js"] }
