[package]
name = "recurr"
version = "0.0.3"
description = "Recurr a budgeting up"
authors = ["Tyler Mayoff"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
recurr-core = { path = "../recurr-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open", "updater"] }
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
log = "0.4.17"
env_logger = "0.10.0"
postgrest = "1.5.0"
thiserror = "1.0.38"
chrono = "0.4.23"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
