[package]
name = "recurr-ui"
version = "0.0.7"
edition = "2021"

[dependencies]
recurr-core = { path = "../recurr-core" }
js-sys = "0.3.59"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.95"
serde = { version = "1.0.140", features = ["derive"] }
supabase-js-rs = { git = "https://github.com/wa1aric/supabase-js-rs.git", branch = "master" }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.59", features = ["console"] }
yew = { version="0.20.0", features = ["csr"] }
getrandom = { version = "0.2.8", features = ["js"] }
yew-hooks = "0.2.0"
dotenv = "0.15.0"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
postgrest = "1.5.0"
chrono = "0.4.23"
yew-router = "0.17.0"
gloo-storage = "0.2.2"
now = "0.1.3"
url = "2.3.1"
futures = "0.3.28"
